Deployed  with MkDocs version: 1.0.4

--- a/getstart/firstapp/index.html
+++ b/getstart/firstapp/index.html
@@ -548,7 +548,8 @@
 <h2 id="_2">Регистрация в личном кабинете</h2>
 <p>Для создания приложения вам нужно зарегистрироваться в личном кабинете Scorocode.</p>
 <h2 id="_3">Создание приложения</h2>
-<p>Создайте приложение в личном кабинете, нажав на кнопку "+ Добавить", обратите внимание на структуру ссылки на приложение, она выглядит следующим образом:</p>
+<p>Создайте приложение в личном кабинете, нажав на кнопку "+ Добавить", перейдите в меню приложения, нажав на его имя в списке.</p>
+<p>Обратите внимание на структуру ссылки на приложение, она выглядит следующим образом:</p>
 <p><strong>https://accounts.домен/p/app/идентификатор_приложения</strong></p>
 <h2 id="cli">Скачивание cli</h2>
 <p>Для того чтобы локально разрабатывать приложение, вам понадобится утилита для консоли <code>cli</code>. </p>
