Deployed  with MkDocs version: 1.0.4

--- a/getstart/firstapp/index.html
+++ b/getstart/firstapp/index.html
@@ -579,9 +579,12 @@
 <p>Через несколько мгновений база данных будет видна в личном кабинете на вкладке "База данных" вашего приложения.</p>
 <h2 id="_5">Скрипты</h2>
 <p>Все, что лежит в папке /project, может быть загружено на сервер и отображаться на вкладке "Хранилище" приложения. </p>
+<blockquote>
+<p>в папке project должна лежать сборка вашего приложения</p>
+</blockquote>
 <p>Для этого выполните следующую команду в консоли (находясь при этом в каталоге приложения):</p>
 <p><code>sc-cli push</code></p>
-<p>Если вы хотите загрузить ваши скрипты с сервера в папку /project, выполните в консоли команду:</p>
+<p>Если вы хотите загрузить сборку приложения с сервера в папку /project, выполните в консоли команду:</p>
 <p><code>sc-cli pull</code></p>
                 
                   
