Deployed  with MkDocs version: 1.0.4

--- a/getstart/firstapp/index.html
+++ b/getstart/firstapp/index.html
@@ -559,7 +559,7 @@
 <p>Откройте консоль, наберите:</p>
 <p><code>sc-cli fetch -dir путь к каталогу приложения -domain домен -id идентификатор приложения</code></p>
 <blockquote>
-<p>потому что структура ссылки https://accounts.домен/p/app/идентификатор_приложения</p>
+<p>потому что структура ссылки https://accounts.{домен}/p/app/{идентификатор_приложения}</p>
 </blockquote>
 <p>Ура! Вы создали каталог приложения, в этом каталоге появилась папка 'project' и скрытая папка .cli/config, в которой содержатся логи.</p>
 <p>Свяжем локальные порты на вашем компьютере с облачными сервисами:</p>
