Deployed  with MkDocs version: 1.0.4

--- a/cli/howto/index.html
+++ b/cli/howto/index.html
@@ -433,7 +433,7 @@
 <p>Scorocode CLI (command line interface, также известен как консоль) - разновидность текстового интерфейса между человеком и компьютером.</p>
 <p>Для того чтобы установить sc-cli, скачайте инсталлятор </p>
 <p><a href="https://accounts.scorocode.ru/downloads/sc-cli-1.0.0.pkg">Скачать инсталлятор sc-cli для Mac OS</a></p>
-<p><a href="https://accounts.scorocode.ru/downloads/sc-cli-1.0.0.deb">Скачать инсталлятор sc-cli для Unix</a></p>
+<p><a href="https://accounts.scorocode.ru/downloads/sc-cli-1.0.0.deb">Скачать инсталлятор sc-cli для Debian</a></p>
 <p><a href="https://accounts.scorocode.ru/downloads/sc-cli-1.0.0-x86.msi">Скачать инсталлятор sc-cli для Windows</a></p>
 <p>После установки sc-cli введите в командной строке  <code>sc-cli</code>. Из адресной строки приложения скопируйте идентификатор приложения (32 символа), с помощью команды <code>fetch</code> инициализируйте работу cli для выбранного приложения, через <code>bridge</code> свяжите порты.</p>
 <p><code>pull</code> и <code>push</code> скачивают файлы приложения на локальный компьюьтер и загружают их в облако.</p>
