--- a/getstart/firstapp/index.html
+++ b/getstart/firstapp/index.html
@@ -567,7 +567,7 @@
 <p><strong>https://accounts.{домен}/p/app/{идентификатор_приложения}</strong></p>
 <h2 id="sc-cli">Скачивание sc-cli</h2>
 <p>Для того чтобы локально разрабатывать приложение, вам понадобится утилита для консоли <code>sc-cli</code>. </p>
-<p>Скачайте и установите ее (у нас есть инсталляторы под <a href="https://accounts.scorocode.ru/downloads/sc-cli-1.0.0.pkg">Mac</a>, <a href="https://accounts.scorocode.ru/downloads/sc-cli-1.0.0.deb">Ubuntu</a>, <a href="https://accounts.scorocode.ru/downloads/sc-cli-1.0.0-x86.msi">Windows</a>)</p>
+<p>Скачайте и установите ее (у нас есть инсталляторы под <a href="https://accounts.scorocode.ru/downloads/sc-cli-1.0.0.pkg">Mac</a>, <a href="https://accounts.scorocode.ru/downloads/sc-cli-1.0.0.deb">Debian</a>, <a href="https://accounts.scorocode.ru/downloads/sc-cli-1.0.0-x86.msi">Windows</a>)</p>
 <h2 id="sc-cli_1">Как использовать sc-cli</h2>
 <p>Для того чтобы пользоваться sc-cli, вам потребуются начальные знания о работе в командной строке.</p>
 <p>Откройте консоль, наберите:</p>
