Deployed  with MkDocs version: 1.0.4

--- a/getstart/first/index.html
+++ b/getstart/first/index.html
@@ -514,8 +514,8 @@
                 
                 <h1 id="_1">Начало работы</h1>
 <h2 id="_2">Быстрый старт</h2>
-<p>Для начала работы в публичном облаке вам необходимо зарегистрироваться в личном кабинете Scorocode по ссылке <a href="https://accounts.scorocode.ru/auth/signup">https://accounts.scorocode.ru/auth/signup</a>. </p>
-<p>Если вы уже зарегистрированы, то войдите в <a href="https://accounts.scorocode.ru/auth">личный кабинет</a>.</p>
+<p>Для начала работы в публичном облаке вам необходимо зарегистрироваться в личном кабинете Scorocode по ссылке <a href="https://account.scorocode.ru/auth/signup">https://account.scorocode.ru/auth/signup</a>. </p>
+<p>Если вы уже зарегистрированы, то войдите в <a href="https://account.scorocode.ru/auth">личный кабинет</a>.</p>
 <p>Если вы хотите пользоваться Scorocode в приватном облаке, то у вас будет своя индивидуальная ссылка.</p>
 <p>После регистрации создайте приложение по инструкции и настройте его.</p>
 <p>Для локальной работы с приложением вам потребуется скачать sc-cli.</p>
