Deployed  with MkDocs version: 1.0.4

--- a/getstart/firstapp/index.html
+++ b/getstart/firstapp/index.html
@@ -589,7 +589,7 @@
 <p>Для того чтобы локально разрабатывать приложение, вам понадобится утилита для консоли <code>sc-cli</code>. </p>
 <p>sc-cli - утилита предоставляющая интерфейс командной строки для работы с приложениями
 созданными в Scorocode.</p>
-<p>Скачайте и установите ее (у нас есть инсталляторы под <a href="https://account.scorocode.ru/downloads/sc-cli-1.0.0.pkg">Mac</a>, <a href="https://account.scorocode.ru/downloads/sc-cli-1.0.0.deb">Debian</a>, <a href="https://account..scorocode.ru/downloads/sc-cli-1.0.0-x86.msi">Windows</a>)</p>
+<p>Скачайте и установите ее (у нас есть инсталляторы под <a href="https://account.scorocode.ru/downloads/sc-cli-1.0.0.pkg">Mac</a>, <a href="https://account.scorocode.ru/downloads/sc-cli-1.0.0.deb">Debian</a>, <a href="https://account.scorocode.ru/downloads/sc-cli-1.0.0-x86.msi">Windows</a>)</p>
 <h2 id="_1">Инициализация приложения</h2>
 <p>Для того чтобы пользоваться sc-cli, вам потребуются начальные знания о работе в командной строке.</p>
 <p>Откройте консоль, наберите:</p>
