Deployed  with MkDocs version: 1.0.4

--- a/cli/howto/index.html
+++ b/cli/howto/index.html
@@ -475,8 +475,8 @@
 <h2 id="sc-cli_1">Краткое описание sc-cli</h2>
 <h3 id="sc-cli_2">(подробное описание всех команд на вкладке "команды sc-cli")</h3>
 <p>После установки sc-cli введите в командной строке  <code>sc-cli</code>. Из адресной строки приложения скопируйте идентификатор приложения (32 символа), с помощью команды <code>fetch</code> инициализируйте работу cli для выбранного приложения, через <code>bridge</code> свяжите порты. Команда <code>init</code> создает шаблон приложения.</p>
-<p><code>pull</code> и <code>push</code> скачивают файлы приложения на локальный компьюьтер и загружают их в облако.</p>
-<p><code>serve</code> симулирует node.js на локальном ПК, <code>dep</code> обновляет зависимости node.js</p>
+<p><code>pull</code> и <code>push</code> скачивают файлы приложения на локальный компьюьтер и загружают их в облако, <code>push</code> также обновляет зависимости node.js.</p>
+<p><code>serve</code> симулирует node.js на локальном ПК</p>
 <p><code>logs</code> выводит логи, <code>regdb</code> регистрирует БД, которую можно редактировать, <code>env</code> выводит переменные окружения.</p>
                 
                   
