--- a/getstart/firstapp/index.html
+++ b/getstart/firstapp/index.html
@@ -622,15 +622,12 @@
 <p>Вы можете локально разрабатывать приложение и при этом тестировать его работу на сервере с помощью команды <code>serve</code></p>
 <p><code>sc-cli serve перечень команд, которые вы хотите запустить</code></p>
 <p>Результатом выполнения будет выполнение указанных выше команд</p>
-<p>Обновление зависимостей node.js выполняется командой </p>
-<p><code>sc-cli dep -dir ссылка на каталог приложения</code></p>
-<p>Результатом выполнения будет запуск процесса обновления зависимостей (npm update), в приложении Scorocode на удаленном сервере.</p>
 <h2 id="_6">Логи</h2>
 <p>Результатом выполнения будут данные журнала логов, выведенные в консоль.
 Содержимое логов выводится в хронологическом порядке.</p>
 <p><code>sc-cli logs -dir ссылка на каталог приложения -lines число строк, которое нужно вывести</code></p>
 <h2 id="scorocode_3">Публикация приложения в Scorocode</h2>
-<p>Все, что лежит в папке /project, может быть загружено на сервер и отображаться на вкладке "Скрипты" приложения. </p>
+<p>Все, что лежит в папке /project, может быть загружено на сервер и отображаться на вкладке "Скрипты" приложения. Также <code>push</code> обновляет список зависимостей node.js.  </p>
 <blockquote>
 <p>в папке project должна лежать сборка вашего приложения</p>
 </blockquote>
